crates/metaxy-cli/tests/snapshots/typescript__snapshot_type_overrides.snap
---
source: crates/metaxy-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

export interface User {
  id: string;
  name: string;
  created_at: string;
  metadata: unknown;
  tags: string[];
}

export interface EventInput {
  title: string;
  scheduled_at: string | null;
}

export interface Event {
  id: string;
  title: string;
}

export type Procedures = {
  queries: {
    get_user: { input: string; output: User };
  };
  mutations: {
    create_event: { input: EventInput; output: Event };
  };
  streams: {
  };
};
