crates/metaxy-cli/tests/snapshots/typescript__snapshot_types_camel_case.snap
---
source: crates/metaxy-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

export interface ServerInfo {
  uptimeSecs: number;
  userId: string;
  isActive: boolean;
}

export type Procedures = {
  queries: {
  };
  mutations: {
  };
  streams: {
  };
};
