crates/metaxy-cli/tests/snapshots/typescript__snapshot_untagged.snap
---
source: crates/metaxy-cli/tests/typescript.rs
expression: output
---
// This file is auto-generated by metaxy-cli. Do not edit manually.
// Re-run `metaxy generate` or use `metaxy watch` to regenerate.

export type Value = null | string | [string, number] | { id: number; name: string };

export type Procedures = {
  queries: {
  };
  mutations: {
  };
  streams: {
  };
};
